# skid-homework

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README-EN.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.html  _not-found.txt  chat.html  chat.txt  fix_actions_area.py  index.html  index.txt  init.html  init.txt  next.config.js  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  wrangler.toml
.github/scripts/: collect_tauri_artifacts.py  configure_android_signing.py  generate_release_notes.py  set_release_version.py
.github/workflows/: android-build.yml  docker-image.yml  tauri-release.yml
.husky/: pre-commit
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
chat/: __next._index.txt  __next._tree.txt  __next.chat.__PAGE__.txt  __next.chat.txt
docs/zh/: scanner-benchmark.md
init/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.init.__PAGE__.txt
public/: manifest.json
server/: build.gradle.kts  settings.gradle.kts
settings/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.settings.__PAGE__.txt  __next.settings.txt
src/: index.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb_plugin.rs  lib.rs  png_bridge.rs  scanner_postprocess.rs  stream_decoder.rs
src/@types/: i18next.d.ts  resources.d.ts  tauri.d.ts
src/ai/: base-client.ts  gemini.ts  openai.ts  (+1 more)
(+132 files in other folders)
